fix: order book items alignment

--- a/web/src/assets/main.less
+++ b/web/src/assets/main.less
@@ -155,6 +155,7 @@ img {
   flex-flow: row wrap;
   overflow: auto;
   justify-content: flex-start;
+  align-content: flex-start;
   line-height: 1.5;
   font-size: 0.8rem;
   background: @component-background;
